--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -6,49 +6,27 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/css/nor.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/font_oc7u4n5mt9n/iconfont.css">
+    <link rel="stylesheet" href="assets/font/iconfont.css">
 </head>
 
 <body>
     <div class="main">
         <div class="side">
-            <ul>
-                <li>
-                    <span class="iconfont icon-yonghu" id="login"></span><span class="tt" id="login">登录</span>
-                    <span class="iconfont icon-iclocked"></span><span class="tt">未登录</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-shequ"></span><span class="tt">社区</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-dianzan_kuai"></span><span class="tt">点赞过</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-JC_054"></span><span class="tt">分享</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-xiangce"></span><span class="tt">相册</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-renwu-ren"></span><span class="tt">人物</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-shijiannaozhong2"></span><span class="tt">月份</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-zu"></span><span class="tt">分类</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-didian"></span><span class="tt">地点</span>
-                </li>
-                <li>
-                    <span class="iconfont icon-dengchu"></span><span class="tt">登出</span>
-                </li>
-            </ul>
+            <a href="#" class="box" id="z1"><i class="iconfont icon-wode"></i><span>未登录</span></a>
+            <a href="#" class="box" id="z2"><i class="iconfont icon-chufadaodaxiao"></i><span>收起</span></a>
+            <a href="#" class="box" id="z3"><i class="iconfont icon-remen"></i><span>热门</span></a>
+            <a href="#" class="box" id="z4"><i class="iconfont icon-zan"></i><span>赞过的</span></a>
+            <a href="#" class="box" id="z5"><i class="iconfont icon-fenxiang"></i><span>分享过</span></a>
+            <a href="#" class="box" id="z6"><i class="iconfont icon-tupian"></i><span>相册</span></a>
+            <a href="#" class="box" id="z7"><i class="iconfont icon-shijian"></i><span>日历</span></a>
+            <a href="#" class="box" id="z8"><i class="iconfont icon-zhekou"></i><span>分类</span></a>
+            <a href="#" class="box" id="z9"><i class="iconfont icon-jieban"></i><span>人物</span></a>
+            <a href="#" class="box" id="z10"><i class="iconfont icon-ditu"></i><span>轨迹</span></a>
+            <a href="#" class="box" id="z11"><i class="iconfont icon-tuichu"></i><span>登出</span></a>
         </div>
         <div class="content">
             <div class="uplan">
-                <span class="iconfont icon-shangchuan"></span>
+                <a href="#" class="upload" id="z12"><i class="iconfont icon-zengjia"></i><span>上传图片</span></a>
             </div>
             <div class="indeximgs">
                 <div class="show">
