--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -37,7 +37,9 @@
             </div>
         </div>
     </div>
-
+    <div id="tanchu">
+        <img src="" alt="">
+    </div>
     <script src="//cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
     <script src="assets/script/main.js"></script>
 </body>
