--- a/assets/templates/wj.html
+++ b/assets/templates/wj.html
@@ -4,7 +4,7 @@
 <head>
     <title>找回密码</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/wj.css" />
 </head>
 
 <body>
