--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,3 +121,36 @@ img {
 #z2 {
     cursor: pointer;
 }
+
+#tanchu {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    text-align: center;
+}
+
+#bgbox {
+    position: fixed;
+    left: 0;
+    top: 0;
+    background: rgb(0, 0, 0);
+    filter: alpha(opacity=30);
+    opacity: 0.7;
+}
+
+#tanchu span {
+    position: fixed;
+    right: 30px;
+    top: 5px;
+    display: block;
+    cursor: pointer;
+    color: #fff;
+    font-weight: bold;
+}
+
+#tanchu img {
+    margin-top: 30px;
+    max-width: 1100px;
+    max-height: 800px;
+}
