--- a/assets/templates/signup.html
+++ b/assets/templates/signup.html
@@ -4,7 +4,7 @@
 <head>
     <title>注册</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/signup.css" />
 </head>
 
 <body>
