上云测试打包静态资源

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-    <title>主页</title>
+    <title>PhoTouch</title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/font/tt.svg">
     <link rel="stylesheet" href="assets/css/nor.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/font/iconfont.css">
