--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-    <title>登录picture</title>
+    <title>登录PhoTouch</title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/font/tt.svg">
     <link rel="stylesheet" href="assets/css/nor.css" />
     <link rel="stylesheet" href="assets/css/login.css" />
 </head>
