--- a/assets/templates/signup.html
+++ b/assets/templates/signup.html
@@ -4,6 +4,7 @@
 <head>
     <title>注册</title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/font/tt.svg">
     <link rel="stylesheet" href="assets/css/signup.css" />
 </head>
 
