--- a/assets/templates/wj.html
+++ b/assets/templates/wj.html
@@ -4,6 +4,7 @@
 <head>
     <title>找回密码</title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/font/tt.svg">
     <link rel="stylesheet" href="assets/css/wj.css" />
 </head>
 
