--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,8 @@ body {
     position: relative;
     min-height: 100vh;
     width: 100%;
-    overflow-x:hidden;
-    background-color:whitesmoke;
+    overflow-x: hidden;
+    background-color: whitesmoke;
 }
 
 .main {
@@ -25,7 +25,7 @@ body {
     height: 100%;
     width: 78px;
     transition: all 0.5s ease;
-    background-color:rgb(34, 33, 33);
+    background-color: rgb(34, 33, 33);
 }
 
 .box {
@@ -60,7 +60,7 @@ body {
 
 .content {
     position: absolute;
-    height:100%;
+    height: 100%;
     width: calc(100%-78px);
     left: 78px;
     transition: all 0.5s ease;
@@ -68,9 +68,11 @@ body {
 
 
 .uplan {
+    position: sticky;
+    top:0;
     width: 100%;
     height: 70px;
-    background-color: rgba(114, 112, 112,0.5);
+    background-color: rgba(114, 112, 112, 0.5);
 }
 
 .upload {
@@ -79,7 +81,7 @@ body {
     height: 50px;
     color: white;
     float: right;
-    margin-top:20px;
+    margin-top: 20px;
 }
 
 .upload i {
@@ -91,7 +93,7 @@ body {
 }
 
 #login {
-    display:none;
+    display: none;
 }
 
 .indeximgs {
@@ -99,7 +101,7 @@ body {
 
     /* Put a card in the next row when previous cards take all width */
     flex-wrap: wrap;
-    justify-content:center;
+    justify-content: center;
 }
 
 .show {
@@ -115,7 +117,7 @@ body {
 
 img {
     width: 100%;
-    height:100%;
+    height: 100%;
 }
 
 #z2 {
@@ -128,6 +130,7 @@ img {
     left: 0;
     top: 0;
     text-align: center;
+    z-index: 1;
 }
 
 #bgbox {
@@ -153,4 +156,41 @@ img {
     margin-top: 30px;
     max-width: 1100px;
     max-height: 800px;
+}
+
+.js-upload-remove-button {
+    color: black;
+}
+
+.upup span {
+    cursor: pointer;
+}
+
+#pp {
+    width: 100%;
+    height:0;
+}
+
+.blackbox {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 60px;
+    position:relative;
+    left:0;
+    bottom: 60px;
+    display:none;
+    text-align: right;
+    color: white;
+}
+
+.show:hover #pp .blackbox {
+    display: block;
+}
+
+.blackbox i {
+    font-size: 25px;
+    position:relative;
+    right:15px;
+    top: 10px;
+    cursor:pointer;
 }
