--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="assets/css/nor.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/font/iconfont.css">
+    <link rel="stylesheet" href="assets/css/styles.imageuploader.css">
 </head>
 
 <body>
     <div class="main">
         <div class="side">
-            <a href="#" class="box" id="z1"><i class="iconfont icon-wode"></i><span>未登录</span></a>
+            <a href="#" class="box" id="z1"><i class="iconfont icon-wode"></i><span id="userkk">未登录</span></a>
             <a class="box" id="z2"><i class="iconfont icon-chufadaodaxiao"></i><span>收起</span></a>
             <a href="#" class="box" id="z3"><i class="iconfont icon-remen"></i><span>热门</span></a>
             <a href="#" class="box" id="z4"><i class="iconfont icon-zan"></i><span>赞过的</span></a>
@@ -33,6 +34,11 @@
                 {{range .imgsrc}}
                 <div class="show">
                     <img src="{{.Url}}" alt="">
+                    <div id="pp">
+                        <div class="blackbox">
+                            <i class="iconfont icon-xihuan1 goodicon"></i>
+                        </div>
+                    </div>
                 </div>
                 {{end}}
             </div>
@@ -41,8 +47,34 @@
     <div id="tanchu">
         <img src="" alt="">
     </div>
-    <script src="//cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+    <div class="upup">
+        <div class="uploader__box js-uploader__box l-center-box">
+            <form action="#" method="POST">
+                <div class="uploader__contents">
+                    <label class="button button--secondary" for="fileinput">请选择文件</label>
+                    <input id="fileinput" class="uploader__file-input" type="file" multiple value="Select Files">
+                </div>
+                <input class="button button--big-bottom" type="submit" value="Upload Selected Files">
+            </form>
+        </div>
+        <span id="closebtn">x</span>
+    </div>
+    <script src="assets/script/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="assets/script/jquery.imageuploader.js" type="text/javascript"></script>
+    <script src="assets/script/jquery.cookie-1.4.1.min.js" type="text/javascript"></script>
     <script src="assets/script/main.js"></script>
+    <script type="text/javascript">
+        (function () {
+            var options = {};
+            $('.js-uploader__box').uploader({
+                'selectButtonCopy': '请选择或拖拽图片',
+                'instructionsCopy': '你可以选择或拖拽多个图片',
+                'submitButtonCopy': '上传选择的图片',
+                'furtherInstructionsCopy': '你可以选择或拖拽更多的图片',
+                'secondarySelectButtonCopy': '选择更多的图片',
+            });
+        }());
+    </script>
 </body>
 
 </html>
