--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -11,24 +11,20 @@
 
 <body>
     <div class="jump">
-        <h1 class="tt">一秒后将跳转到主页</h1>
+        <h1 class="tt">登录成功,将跳转到主页</h1>
     </div>
-    <div class="big">
-        <div class="img"></div>
-        <div class="user">
-            <div class="mm">
-                <h1>登录picture</h1>
-                <form>
-                    
-                </form>
-                <input type="email" class="name" placeholder="邮箱">
-                <input type="password" class="pass" placeholder="密码">
-                <div class="wjreg">
-                    <a href="/wj" class="wj">忘记密码</a>
-                    <a href="/signup" class="reg">注册账号</a>
-                </div>
-                <button type="button" class="up">登录</button>
+    <div class="user">
+        <div class="mm">
+            <h1>登录PhoTouch</h1>
+            <form>
+            </form>
+            <input type="email" class="name" placeholder="邮箱">
+            <input type="password" class="pass" placeholder="密码">
+            <div class="wjreg">
+                <a href="/wj" class="wj">忘记密码</a>
+                <a href="/signup" class="reg">注册账号</a>
             </div>
+            <button type="button" class="up">登录</button>
         </div>
     </div>
     <script src="//cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
