--- a/assets/templates/signup.html
+++ b/assets/templates/signup.html
@@ -2,20 +2,29 @@
 <html>
 
 <head>
-    <title>注册</title>
+    <title>登录PhoTouch</title>
     <meta charset="utf-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/font/tt.svg">
     <link rel="stylesheet" href="assets/css/nor.css" />
-    <link rel="stylesheet" href="assets/css/signup.css" />
+    <link rel="stylesheet" href="assets/css/login.css" />
 </head>
 
 <body>
-    <h1>
-        暂不支持注册
-    </h1>
-    <h2>
-        <a href="/login">点击返回注册页面</a>
-    </h2>
+    <div class="jump">
+        <h1 class="tt">注册成功,将跳转到登录页面</h1>
+    </div>
+    <div class="user">
+        <div class="mm kk">
+            <h1>注册账号</h1>
+            <input type="email" class="name k1" placeholder="邮箱">
+            <button type="button" class="up k2">发送验证码</button>
+            <input type="emailcode" class="pass k3" placeholder="填入验证码">
+            <input type="password" class="pass k4" placeholder="设定密码">
+            <button type="button" class="up k5">提交</button>
+        </div>
+    </div>
+    <script src="assets/script/jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="assets/script/signup.js"></script>
 </body>
 
 </html>
