--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -85,3 +85,35 @@ input {
     margin: 60px auto auto auto;
     cursor: pointer;
 }
+
+.k1 {
+    width: 220px;
+    height: 20px;
+    margin: 0;;
+}
+
+.k2 {
+    width: 120px;
+    height: 40px;
+    margin: 20px auto auto auto;
+    display: block;
+    font: 900 20px '';
+    line-height: 20px;
+    border-radius: 20px;
+    background-image: linear-gradient(to left, #9c88ff, #3cadeb);
+    text-align: center;
+    cursor: pointer;
+}
+
+.k5 {
+    width: 120px;
+    height: 40px;
+    margin: 20px auto auto auto;
+    display: block;
+    font: 900 20px '';
+    line-height: 20px;
+    border-radius: 20px;
+    background-image: linear-gradient(to left, #9c88ff, #3cadeb);
+    text-align: center;
+    cursor: pointer;
+}
