--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -27,7 +27,7 @@
             <button type="button" class="up">登录</button>
         </div>
     </div>
-    <script src="//cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+    <script src="assets/script/jquery-1.11.0.min.js" type="text/javascript"></script>
     <script src="assets/script/login.js"></script>
 </body>
 
