--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -46,6 +46,7 @@
     </div>
     <div id="tanchu">
         <img src="" alt="">
+        <span><a href="" download="img" class="down"><i class="iconfont icon-xiazai"></i></a></span>
     </div>
     <div class="upup">
         <div class="uploader__box js-uploader__box l-center-box">
