--- a/assets/font/iconfont.css
+++ b/assets/font/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1639452869467') format('truetype');
+  src: url('iconfont.ttf?t=1640005770611') format('truetype');
 }
 
 .iconfont {
@@ -9,6 +9,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xiazai:before {
+  content: "\f0304";
 }
 
 .icon-sousuo:before {
